--- a/projetoIntegradorGeneration/src/main/resources/application.properties
+++ b/projetoIntegradorGeneration/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/projeto_integrador_generation_dev?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
 
